--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new page</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS -->
+    <link rel="stylesheet" href="styles.css"> 
 </head>
-<body>
+    <body class="works_on_smartphone">
+
+
     <header>
-        <h1>Header Content</h1>
+        <h1>Head content</h1>
     </header>
 
     <main>
